# infokala

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  .travis.yml  LICENSE  MANIFEST.in  README.md  bower.json  gulpfile.coffee  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
.github/workflows/: ci.yml
infokala/: admin.py  apps.py  forms.py  models.py  seeding.py  tests.py  views.py
infokala/migrations/: 0001_initial.py  0002_auto_20150403_1930.py  0002_auto_20150602_2047.py  0003_auto_20150403_2041.py  0003_workflow_slug.py  0004_populate_slug.py  0005_auto_20151219_1304.py  0006_messagecomment_messagecreateevent_messagedeleteevent_messageeditevent_messagestatechangeevent.py  0007_messagetype_color.py  0008_no_empty_slugs.py  0009_index_names.py
infokala/static/infokala/: infokala.css  infokala.html  infokala.js  infokala.js.map
infokala/static_src/infokala/: InfokalaApp.jsx  config_service.coffee  config_service.js  infokala.coffee  infokala.jade  infokala.js  infokala.pug  infokala.stylus  internal_messages.coffee  internal_messages.js  main_view_model.coffee  main_view_model.js  message_service.coffee  message_service.js  message_view_model.coffee  message_view_model.js  utils.coffee  utils.js
infokala/templates/infokala/: infokala.html
infokala_test_app/: models.py
infokala_test_app/management/commands/: setup_infokala_test_app.py
infokala_test_app/migrations/: 0001_initial.py
infokala_test_site/: settings.py  urls.py  wsgi.py
infokala_tests/: conftest.py  test_infokala.py  utils.py
