[metadata]
name = infokala
version = 0.5.0
description = Info log management system for Desucon and Tracon
author = Santtu Pajukanta
author_email = japsu@desucon.fi
url = https://github.com/kcsry/infokala
python_requires = >=3.6

[options]
packages =
    infokala
    infokala.migrations
include_package_data = True
zip_safe = False
install_requires =
    Django>=2.0
    python-dateutil>=2.6
    tzlocal

[pep8]
max-line-length = 120
exclude = *migrations*
ignore = E309

[flake8]
exclude = migrations
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = infokala_test_site.settings
norecursedirs = .git venv* site-packages
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE

[isort]
atomic=true
combine_as_imports=false
indent=4
known_framework=django
length_sort=false
line_length=120
multi_line_output=5
not_skip=__init__.py
order_by_type=false
sections=FUTURE,STDLIB,FRAMEWORK,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip=migrations
wrap_length=120
